--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:33:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerDesktop.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">&gt;&gt;beforeSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:33:58</td>   <td>470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerDesktop.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">main_method</td> 
-  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:33:58</td>   <td>474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerDesktop.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">main_method</td> 
-  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:33:58</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerDesktop.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:34:04</td>   <td>5900</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerDesktop.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:33:58</td>   <td>474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerDesktop.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@769429195</td>   <td></td> </tr>
-<tr bgcolor="bc99f8">  <td>20/07/07 21:34:03</td>   <td>5710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerDesktop.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerDesktop@2133814f]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@769429195</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:45:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&gt;&gt;beforeSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:45:58</td>   <td>631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:45:58</td>   <td>636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:45:58</td>   <td>108</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:46:29</td>   <td>31220</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:45:58</td>   <td>636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/19 13:46:28</td>   <td>30716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
 </table>
