--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>E:\MS\Automation Softwares\My Framework\BDD-Framework\testng_Desktop_Cucumber.xml</span>
+                    <span>E:\MS\Automation Softwares\My Framework\BDD-Framework\testngMobile.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,12 +101,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerDesktop" hash-for-method="main_method(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM)">main_method(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerMobile" hash-for-method="main_method(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator)">main_method(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerDesktop" hash-for-method="main_method(TC001_Notepad operations, 1, Y, Chrome, slave1, XM)">main_method(TC001_Notepad operations, 1, Y, Chrome, slave1, XM)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerMobile" hash-for-method="main_method(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator)">main_method(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -124,23 +124,23 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.testautomation.TestRunner.TestRunnerDesktop</span>
+              <span class="class-name">com.testautomation.TestRunner.TestRunnerMobile</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="main_method(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM)">
-                  </a> <!-- main_method(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM) -->
+                  <a name="main_method(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator)">
+                  </a> <!-- main_method(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator) -->
                   <span class="method-name">main_method</span>
-                  <span class="parameters">(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM)</span>
+                  <span class="parameters">(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="main_method(TC001_Notepad operations, 1, Y, Chrome, slave1, XM)">
-                  </a> <!-- main_method(TC001_Notepad operations, 1, Y, Chrome, slave1, XM) -->
+                  <a name="main_method(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator)">
+                  </a> <!-- main_method(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator) -->
                   <span class="method-name">main_method</span>
-                  <span class="parameters">(TC001_Notepad operations, 1, Y, Chrome, slave1, XM)</span>
+                  <span class="parameters">(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,16 +148,16 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\MS\Automation Softwares\My Framework\BDD-Framework\testng_Desktop_Cucumber.xml</span>
+            <span class="header-content">E:\MS\Automation Softwares\My Framework\BDD-Framework\testngMobile.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;none&quot;&gt;
-  &lt;test name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.testautomation.TestRunner.TestRunnerDesktop&quot;/&gt;
+      &lt;class name=&quot;com.testautomation.TestRunner.TestRunnerMobile&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -200,17 +200,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'main_method')
-data.setCell(0, 2, 'com.testautomation.TestRunner.TestRunnerDesktop')
-data.setCell(0, 3, 5236);
+data.setCell(0, 2, 'com.testautomation.TestRunner.TestRunnerMobile')
+data.setCell(0, 3, 30078);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'main_method')
-data.setCell(1, 2, 'com.testautomation.TestRunner.TestRunnerDesktop')
-data.setCell(1, 3, 3);
+data.setCell(1, 2, 'com.testautomation.TestRunner.TestRunnerMobile')
+data.setCell(1, 3, 4);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -236,34 +236,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.testautomation.TestRunner.TestRunnerDesktop</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.testautomation.TestRunner.TestRunnerMobile</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeSetup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
-                <span class="method-start">92 ms</span>
+                <span class="method-start">109 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">main_method(TC001_Homeowners_XM_STP_Assignment, 1, N, Chrome, slave1, XM)</span>
-                <span class="method-start">472 ms</span>
+                <span class="method-name">main_method(TC_001_Calculator_Automation, 1, N, Android, 8.1, Android Emulator)</span>
+                <span class="method-start">632 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerDesktop.main_method(java.lang.String, j...)</span>
-                <span class="method-start">475 ms</span>
+                <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerMobile.main_method(java.lang.String, ja...)</span>
+                <span class="method-start">637 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">main_method(TC001_Notepad operations, 1, Y, Chrome, slave1, XM)</span>
-                <span class="method-start">476 ms</span>
+                <span class="method-name">main_method(TC_002_Dial_Mobile_Number, 1, Y, Android, 8.1, Android Emulator)</span>
+                <span class="method-start">637 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerDesktop.main_method(java.lang.String, j...)</span>
-                <span class="method-start">5712 ms</span>
+                <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerMobile.main_method(java.lang.String, ja...)</span>
+                <span class="method-start">30717 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">5902 ms</span>
+                <span class="method-start">31221 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
