--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&gt;&gt;beforeSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">main_method</td> 
-  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">main_method</td> 
-  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">main_method</td> 
-  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">main_method</td> 
-  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:40</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:56</td>   <td>15645</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:41</td>   <td>729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>20/07/20 10:46:55</td>   <td>15094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@275bf9b3]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@1320105604</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&gt;&gt;beforeSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerMobile.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">main_method</td> 
+  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:10</td>   <td>255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerMobile.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:01:08</td>   <td>58275</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:00:11</td>   <td>1556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
+<tr bgcolor="d299e3">  <td>20/07/25 15:01:08</td>   <td>57754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerMobile.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerMobile@43301423]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@1306324352</td>   <td></td> </tr>
 </table>
