--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,7 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerUI" hash-for-method="main_method(TC002_Education Edit, 1, Y, Chrome, slave1, XM)">main_method(TC002_Education Edit, 1, Y, Chrome, slave1, XM)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -99,11 +113,6 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerUI" hash-for-method="main_method(TC002_Education Edit, 1, N, Chrome, slave1, XM)">main_method(TC002_Education Edit, 1, N, Chrome, slave1, XM)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.testautomation.TestRunner.TestRunnerUI" hash-for-method="main_method(TC001_Skill Edit, 1, Y, Chrome, slave1, XM)">main_method(TC001_Skill Edit, 1, Y, Chrome, slave1, XM)</a> <!-- method navigator-link -->
@@ -121,20 +130,35 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.testautomation.TestRunner.TestRunnerUI</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="main_method(TC002_Education Edit, 1, Y, Chrome, slave1, XM)">
+                  </a> <!-- main_method(TC002_Education Edit, 1, Y, Chrome, slave1, XM) -->
+                  <span class="method-name">main_method</span>
+                  <span class="parameters">(TC002_Education Edit, 1, Y, Chrome, slave1, XM)</span>
+                  <div class="stack-trace">java.lang.NullPointerException
+	at com.testautomation.WrapperComponent.WebDriverHelper.clickElement(WebDriverHelper.java:131)
+	at com.testautomation.PageObjects.OrangeHRMPage.EditSkills(OrangeHRMPage.java:16)
+	at com.testautomation.StepDef.OrangeHRMStepDef.edit_skills(OrangeHRMStepDef.java:10)
+	at ✽.Edit skills(Features/UI/BAU_Regression/OrangeHRM.feature:8)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.testautomation.TestRunner.TestRunnerUI</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="main_method(TC002_Education Edit, 1, N, Chrome, slave1, XM)">
-                  </a> <!-- main_method(TC002_Education Edit, 1, N, Chrome, slave1, XM) -->
-                  <span class="method-name">main_method</span>
-                  <span class="parameters">(TC002_Education Edit, 1, N, Chrome, slave1, XM)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="main_method(TC001_Skill Edit, 1, Y, Chrome, slave1, XM)">
@@ -155,11 +179,11 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;none&quot;&gt;
-  &lt;test name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; name=&quot;test&quot; parallel=&quot;methods&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.testautomation.TestRunner.TestRunnerUI&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +195,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,16 +225,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'main_method')
 data.setCell(0, 2, 'com.testautomation.TestRunner.TestRunnerUI')
-data.setCell(0, 3, 26260);
+data.setCell(0, 3, 91070);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'main_method')
 data.setCell(1, 2, 'com.testautomation.TestRunner.TestRunnerUI')
-data.setCell(1, 3, 0);
+data.setCell(1, 3, 88766);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -243,27 +267,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
-                <span class="method-start">116 ms</span>
+                <span class="method-start">104 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">main_method(TC001_Skill Edit, 1, Y, Chrome, slave1, XM)</span>
-                <span class="method-start">607 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">main_method(TC002_Education Edit, 1, Y, Chrome, slave1, XM)</span>
+                <span class="method-start">543 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerUI.main_method(java.lang.String, java.l...)</span>
-                <span class="method-start">26870 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">main_method(TC002_Education Edit, 1, N, Chrome, slave1, XM)</span>
-                <span class="method-start">27701 ms</span>
+                <span class="method-name">main_method(TC001_Skill Edit, 1, Y, Chrome, slave1, XM)</span>
+                <span class="method-start">543 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
+                <span class="method-name">tearDownTest([TestResult name=main_method status=FAILURE method=TestRunnerUI.main_method(java.lang.String, java.l...)</span>
+                <span class="method-start">89311 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
                 <span class="method-name">tearDownTest([TestResult name=main_method status=SUCCESS method=TestRunnerUI.main_method(java.lang.String, java.l...)</span>
-                <span class="method-start">27702 ms</span>
+                <span class="method-start">91615 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">27702 ms</span>
+                <span class="method-start">91615 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
