--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerUI.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&gt;&gt;beforeSetup</td> 
+<tr bgcolor="94f994">  <td>20/09/05 14:04:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunnerUI.beforeSetup()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&gt;&gt;beforeSetup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:02</td>   <td>605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerUI.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">main_method</td> 
-  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:29</td>   <td>27699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerUI.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">main_method</td> 
-  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:01</td>   <td>114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerUI.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:29</td>   <td>27700</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:28</td>   <td>26870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@22671767</td>   <td></td> </tr>
-<tr bgcolor="94f994">  <td>20/08/07 13:17:29</td>   <td>27700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@22671767</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:04:41</td>   <td>542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerUI.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">main_method</td> 
+  <td>PoolService-1@827486781</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:04:41</td>   <td>542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerUI.main_method(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">main_method</td> 
+  <td>PoolService-1@827486781</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:04:40</td>   <td>103</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerUI.setUpClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@1460600466</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:06:12</td>   <td>91614</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownClass()[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@1460600466</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:06:10</td>   <td>89310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>PoolService-0@1518509192</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/09/05 14:06:12</td>   <td>91614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerUI.tearDownTest(org.testng.ITestResult)[pri:0, instance:com.testautomation.TestRunner.TestRunnerUI@3b07a0d6]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>PoolService-0@1518509192</td>   <td></td> </tr>
 </table>
